Update API URL to production

--- a/public/payment-simulation.html
+++ b/public/payment-simulation.html
@@ -72,7 +72,7 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', async () => {
-            const API_BASE = 'http://localhost:5001';
+            const API_BASE = 'https://trueigtech.onrender.com';
             const urlParams = new URLSearchParams(window.location.search);
             const planId = urlParams.get('planId');
             const token = localStorage.getItem('token');
